--- a/weatherapp/templates/weatherapp/index.html
+++ b/weatherapp/templates/weatherapp/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap"
+      href=""
       rel="stylesheet"
     />
 </head>
